--- a/MyVue/index.html
+++ b/MyVue/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MyVue</title>
-</head>
-<body>
-  <div id="app"></div>
-  <script src="./MyVue.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>my Vue</title>
+  </head>
+  <body>
+    <div id="app">
+    </div>
+    <input type="text" name="" id="value">
+    <br>
+    <button id="push">push</button>
+    <button id="pop">pop</button>
+    <script type="module" src="/main.js"></script>
+  </body>
 </html>
